--- a/form/src/main/res/layout/form_item_menu.xml
+++ b/form/src/main/res/layout/form_item_menu.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/formItemVertical"
         android:paddingBottom="@dimen/formItemVertical"
-        android:textAppearance="?textAppearanceBodyMedium"
+        android:textAppearance="?textAppearanceBodyLarge"
         android:textColor="@color/form_text"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_iv_icon"
@@ -43,10 +43,22 @@
         android:background="@drawable/form_ripple_menu_selected_background"
         android:paddingStart="@dimen/formItemMenuIconPadding"
         android:paddingEnd="@dimen/formItemMenuIconPadding"
-        android:scaleType="centerInside"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/form_iv_more"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@android:drawable/sym_def_app_icon" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/form_iv_more"
+        android:layout_width="@dimen/formItemIconSize"
+        android:layout_height="0dp"
+        android:layout_gravity="center_vertical"
+        android:paddingStart="@dimen/formItemMenuIconPadding"
+        android:paddingEnd="@dimen/formItemMenuIconPadding"
+        android:src="@drawable/form_ic_more"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@android:drawable/sym_def_app_icon" />
+        app:tint="?colorSecondary" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
