--- a/form/src/main/res/layout/form_item_rate.xml
+++ b/form/src/main/res/layout/form_item_rate.xml
@@ -20,42 +20,18 @@
         tools:ems="4"
         tools:text="测试名称" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/form_input_content"
-        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="0dp"
+    <androidx.appcompat.widget.AppCompatRatingBar
+        android:id="@+id/form_rating"
+        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/formItemHorizontalContent"
-        app:boxStrokeColor="@android:color/transparent"
-        app:boxStrokeErrorColor="@android:color/transparent"
-        app:boxStrokeWidth="0dp"
-        app:boxStrokeWidthFocused="0dp"
-        app:endIconCheckable="true"
-        app:endIconMinSize="@dimen/formItemMenuIconSize"
-        app:hintEnabled="false"
+        android:numStars="5"
+        android:progressTint="?colorTertiary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
-        app:layout_constraintTop_toTopOf="parent"
-        app:prefixTextAppearance="?textAppearanceBodyMedium"
-        app:prefixTextColor="?colorOutline"
-        app:suffixTextAppearance="?textAppearanceBodyMedium"
-        app:suffixTextColor="?colorOutline">
-
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
-            android:id="@+id/form_edit_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fadingEdgeLength="@dimen/formItemHorizontalContent"
-            android:paddingStart="@dimen/formItemHorizontalContent"
-            android:paddingTop="@dimen/formItemVertical"
-            android:paddingEnd="@dimen/formItemHorizontalContent"
-            android:paddingBottom="@dimen/formItemVertical"
-            android:requiresFadingEdge="horizontal"
-            android:textAppearance="?textAppearanceBodyMedium"
-            android:textColor="@color/form_text"
-            tools:text="内容" />
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/form_iv_menu"
