--- a/form/src/main/res/layout/form_item_address.xml
+++ b/form/src/main/res/layout/form_item_address.xml
@@ -26,8 +26,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:insetTop="2dp"
-        android:insetBottom="2dp"
         android:minHeight="0dp"
         android:paddingStart="@dimen/formItemHorizontalContent"
         android:paddingEnd="@dimen/formItemHorizontalContent"
@@ -36,7 +34,6 @@
         app:icon="@drawable/form_ic_more"
         app:iconGravity="end"
         app:iconPadding="@dimen/formItemMenuIconPadding"
-        app:iconSize="@dimen/formItemMenuIconSizeIgnorePadding"
         app:iconTint="?colorOnSurface"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
@@ -48,7 +45,6 @@
         android:id="@+id/form_iv_menu"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_gravity="center_vertical"
         android:background="@drawable/form_ripple_menu_selected_background"
         android:paddingStart="@dimen/formItemMenuIconPadding"
         android:paddingEnd="@dimen/formItemMenuIconPadding"
@@ -70,9 +66,11 @@
         app:endIconMinSize="@dimen/formItemMenuIconSize"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toBottomOf="@id/form_btn_area"
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalContent"
         app:prefixTextAppearance="?textAppearanceBodyMedium"
         app:prefixTextColor="?colorOutline"
         app:suffixTextAppearance="?textAppearanceBodyMedium"
