--- a/form/src/main/res/layout/form_item_radio_child.xml
+++ b/form/src/main/res/layout/form_item_radio_child.xml
@@ -3,8 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/form_radio"
     android:layout_width="wrap_content"
+    style="@style/Widget.Material3.CompoundButton.RadioButton"
     android:layout_height="wrap_content"
     android:minWidth="0dp"
+    android:background="@drawable/form_ripple_menu_selected_background"
     android:minHeight="0dp"
     android:paddingTop="@dimen/formItemHorizontalContent"
     android:paddingEnd="@dimen/formItemHorizontalContent"
