--- a/form/src/main/res/layout/form_item_select.xml
+++ b/form/src/main/res/layout/form_item_select.xml
@@ -26,8 +26,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:insetTop="2dp"
-        android:insetBottom="2dp"
         android:minHeight="0dp"
         android:paddingStart="@dimen/formItemHorizontalContent"
         android:paddingEnd="@dimen/formItemHorizontalContent"
@@ -35,9 +33,8 @@
         android:textColor="?colorOnSurface"
         app:icon="@drawable/form_ic_more"
         app:iconGravity="end"
-        app:iconPadding="@dimen/formItemMenuIconPadding"
-        app:iconSize="@dimen/formItemMenuIconSizeIgnorePadding"
         app:iconTint="?colorOnSurface"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
