--- a/form/src/main/res/layout/form_item_input.xml
+++ b/form/src/main/res/layout/form_item_input.xml
@@ -31,6 +31,7 @@
         app:endIconMinSize="@dimen/formItemMenuIconSize"
         app:endIconMode="clear_text"
         app:hintEnabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
