--- a/form/src/main/res/layout/form_item_input_auto_complete.xml
+++ b/form/src/main/res/layout/form_item_input_auto_complete.xml
@@ -33,6 +33,7 @@
         app:endIconCheckable="true"
         app:endIconMinSize="@dimen/formItemMenuIconSize"
         app:hintEnabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
