--- a/form/src/main/res/layout/form_item_input_auto_complete.xml
+++ b/form/src/main/res/layout/form_item_input_auto_complete.xml
@@ -50,6 +50,7 @@
             android:paddingStart="@dimen/formItemHorizontalContent"
             android:paddingTop="@dimen/formItemVertical"
             android:paddingEnd="@dimen/formItemHorizontalContent"
+            android:overlapAnchor="false"
             android:paddingBottom="@dimen/formItemVertical"
             android:requiresFadingEdge="horizontal"
             android:textAppearance="?textAppearanceBodyMedium"
