--- a/form/src/main/res/layout/form_item_menu.xml
+++ b/form/src/main/res/layout/form_item_menu.xml
@@ -23,8 +23,8 @@
         android:id="@+id/form_tv_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/formItemVertical"
-        android:paddingBottom="@dimen/formItemVertical"
+        android:paddingTop="@dimen/formItemVerticalEdge"
+        android:paddingBottom="@dimen/formItemVerticalEdge"
         android:textAppearance="?textAppearanceBodyLarge"
         android:textColor="@color/form_text"
         app:layout_constraintBottom_toBottomOf="parent"
