--- a/form/src/main/res/layout/form_item_rating.xml
+++ b/form/src/main/res/layout/form_item_rating.xml
@@ -15,6 +15,7 @@
         android:paddingBottom="@dimen/formItemVertical"
         android:textAppearance="?textAppearanceBodyMedium"
         android:textColor="?colorSecondary"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ems="4"
@@ -25,8 +26,9 @@
         style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:isIndicator="false"
         android:numStars="5"
-        android:progressTint="?colorTertiary"
+        android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
         app:layout_constraintHorizontal_bias="0.0"
