--- a/form/src/main/res/layout/form_item_address.xml
+++ b/form/src/main/res/layout/form_item_address.xml
@@ -80,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fadingEdgeLength="@dimen/formItemHorizontalContent"
+            android:imeOptions="actionDone"
             android:paddingStart="@dimen/formItemHorizontalContent"
             android:paddingTop="@dimen/formItemVertical"
             android:paddingEnd="@dimen/formItemHorizontalContent"
