--- a/form/src/main/res/layout/form_item_input.xml
+++ b/form/src/main/res/layout/form_item_input.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/form_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -46,6 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fadingEdgeLength="@dimen/formItemHorizontalContent"
+            android:imeOptions="actionDone"
             android:paddingStart="@dimen/formItemHorizontalContent"
             android:paddingTop="@dimen/formItemVertical"
             android:paddingEnd="@dimen/formItemHorizontalContent"
