--- a/form/src/main/res/values/dimens.xml
+++ b/form/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <dimen name="formItemMaxWidth">480dp</dimen>
+
     <dimen name="formPartVertical">8dp</dimen>
     <dimen name="formPartVerticalEdge">16dp</dimen>
     <dimen name="formPartHorizontal">16dp</dimen>
