--- a/core/src/main/res/values/learn_themes.xml
+++ b/core/src/main/res/values/learn_themes.xml
@@ -29,6 +29,7 @@
     <style name="Theme.Learn.primarySurface" parent="Theme.Learn.Primary" />
 
     <style name="Base.Theme.Learn" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:actionBarSize">@dimen/learn_action_bar_size</item>
         <item name="android:colorBackground">?colorSurface</item>
         <item name="windowActionModeOverlay">false</item>
         <item name="android:windowContentTransitions">true</item>
