--- a/form/src/main/res/layout/form_item_group_name_default.xml
+++ b/form/src/main/res/layout/form_item_group_name_default.xml
@@ -33,6 +33,13 @@
         app:layout_goneMarginStart="@dimen/formItemHorizontal"
         tools:text="内容" />
 
-    <include layout="@layout/form_include_menu" />
+    <include
+        layout="@layout/form_include_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/formItemHorizontalIgnoreContent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
