--- a/form/src/main/res/layout/form_item_input.xml
+++ b/form/src/main/res/layout/form_item_input.xml
@@ -24,6 +24,7 @@
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/formItemHorizontalIgnoreContent"
         app:boxBackgroundMode="none"
         app:endIconCheckable="true"
         app:endIconDrawable="@drawable/form_ic_edit_clear"
@@ -31,10 +32,9 @@
         app:endIconMode="clear_text"
         app:hintEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginEnd="@dimen/formItemHorizontalContent"
         app:prefixTextAppearance="?textAppearanceBodyMedium"
         app:prefixTextColor="?colorOutline"
         app:suffixTextAppearance="?textAppearanceBodyMedium"
@@ -56,7 +56,5 @@
             tools:text="内容" />
 
     </com.google.android.material.textfield.TextInputLayout>
-
-    <include layout="@layout/form_include_menu" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
