--- a/form/src/main/res/layout/form_item_rating.xml
+++ b/form/src/main/res/layout/form_item_rating.xml
@@ -34,6 +34,13 @@
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <include layout="@layout/form_include_menu" />
+    <include
+        layout="@layout/form_include_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginEnd="@dimen/formItemHorizontalIgnoreContent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
