--- a/form/src/main/res/layout/form_item_input_auto_complete.xml
+++ b/form/src/main/res/layout/form_item_input_auto_complete.xml
@@ -24,7 +24,6 @@
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:paddingEnd="@dimen/formItemHorizontalContent"
         app:boxStrokeColor="@android:color/transparent"
         app:boxStrokeErrorColor="@android:color/transparent"
         app:boxStrokeWidth="0dp"
@@ -33,9 +32,10 @@
         app:endIconMinSize="@dimen/formItemMenuIconSize"
         app:hintEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalIgnoreContent"
         app:prefixTextAppearance="?textAppearanceBodyMedium"
         app:prefixTextColor="?colorOutline"
         app:suffixTextAppearance="?textAppearanceBodyMedium"
