--- a/form/src/main/res/layout/form_item_label.xml
+++ b/form/src/main/res/layout/form_item_label.xml
@@ -26,7 +26,7 @@
         android:textAppearance="?textAppearanceTitleLarge"
         android:textColor="@color/form_text"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintStart_toEndOf="@id/form_iv_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_goneMarginEnd="@dimen/formItemHorizontal"
