--- a/form/src/main/res/layout/form_item_radio.xml
+++ b/form/src/main/res/layout/form_item_radio.xml
@@ -28,10 +28,10 @@
         android:overScrollMode="never"
         app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginEnd="@dimen/formItemHorizontalContent"
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalIgnoreContent"
         tools:listitem="@layout/form_item_radio_child" />
 
     <include
