--- a/form/src/main/res/layout/form_item_rating.xml
+++ b/form/src/main/res/layout/form_item_rating.xml
@@ -29,10 +29,11 @@
         android:numStars="5"
         android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalIgnoreContent" />
 
     <include
         layout="@layout/form_include_menu"
