--- a/form/src/main/res/layout/form_item_slider.xml
+++ b/form/src/main/res/layout/form_item_slider.xml
@@ -23,10 +23,10 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_goneMarginEnd="@dimen/formItemHorizontalContent">
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalIgnoreContent">
 
         <com.google.android.material.slider.Slider
             android:id="@+id/form_slider_content"
