--- a/form/src/main/res/layout/form_include_menu.xml
+++ b/form/src/main/res/layout/form_include_menu.xml
@@ -2,10 +2,12 @@
 <com.google.android.material.button.MaterialButton xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/form_iv_menu"
+    android:id="@+id/form_btn_menu"
     style="@style/Widget.Material3.Button.TextButton"
     android:layout_width="wrap_content"
     android:layout_height="0dp"
+    android:insetTop="2dp"
+    android:insetBottom="2dp"
     android:minWidth="0dp"
     android:minHeight="0dp"
     android:paddingStart="@dimen/formItemMenuIconPadding"
