--- a/form/src/main/res/layout/form_item_text.xml
+++ b/form/src/main/res/layout/form_item_text.xml
@@ -32,9 +32,10 @@
         android:textColor="@color/form_text"
         android:textIsSelectable="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/form_iv_menu"
+        app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintStart_toEndOf="@id/form_tv_name"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_goneMarginEnd="@dimen/formItemHorizontalIgnoreContent"
         tools:text="内容" />
 
     <include
