--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.chooongg.core.widget.TopAppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:appBarType="large">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -33,5 +35,16 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_margin="@dimen/contentMedium"
+        android:text="显示Loading"
+        app:icon="@drawable/ic_main_loading"
+        app:layout_anchor="@id/appbar_layout"
+        app:layout_anchorGravity="bottom|end" />
 
 </com.chooongg.core.widget.TopAppBarLayout>
