--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/btn"
     style="@style/Widget.Material3.Button.OutlinedButton"
-    android:layout_width="match_parent"
+    android:layout_width="160dp"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/contentSmall"
     android:insetTop="0dp"
     android:insetBottom="0dp"
     android:paddingBottom="@dimen/contentMedium"
