--- a/filePicker/src/main/res/layout/learn_activity_file_picker.xml
+++ b/filePicker/src/main/res/layout/learn_activity_file_picker.xml
@@ -1,48 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.chooongg.core.widget.TopAppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true">
+    <com.google.android.material.button.MaterialButtonToggleGroup
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        app:checkedButton="@id/btn_common"
+        app:isTopAppBarChild="true"
+        app:selectionRequired="true"
+        app:singleSelection="true">
 
-        <com.chooongg.core.widget.TopAppBar
-            android:id="@+id/top_app_bar"
-            android:layout_width="match_parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_common"
+            style="?materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="0dp">
+            android:text="@string/learn_file_picker_type_common" />
 
-            <com.google.android.material.button.MaterialButtonToggleGroup
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                app:checkedButton="@id/btn_common"
-                app:selectionRequired="true"
-                app:singleSelection="true">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_storage"
+            style="?materialButtonOutlinedStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/learn_file_picker_type_browser" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_common"
-                    style="@style/Widget.Material3.Button.OutlinedButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="常用应用" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_storage"
-                    style="@style/Widget.Material3.Button.OutlinedButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="内部存储" />
-
-            </com.google.android.material.button.MaterialButtonToggleGroup>
-
-        </com.chooongg.core.widget.TopAppBar>
-
-    </com.google.android.material.appbar.AppBarLayout>
+    </com.google.android.material.button.MaterialButtonToggleGroup>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
@@ -51,4 +36,4 @@
         android:background="?android:colorBackground"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</com.chooongg.core.widget.TopAppBarLayout>
