--- a/form/src/main/res/layout/form_item_rating.xml
+++ b/form/src/main/res/layout/form_item_rating.xml
@@ -13,7 +13,7 @@
         android:paddingTop="@dimen/formItemVertical"
         android:paddingBottom="@dimen/formItemVertical"
         android:textAppearance="?textAppearanceBodyMedium"
-        android:textColor="?colorSecondary"
+        android:textColor="@color/form_name_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,9 +25,6 @@
         style="@style/Widget.AppCompat.RatingBar.Indicator"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:isIndicator="false"
-        android:numStars="5"
-        android:stepSize="1.0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/form_btn_menu"
         app:layout_constraintHorizontal_bias="0.0"
